--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tlcommander",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/aki-k-no/TLCommander.git",
+  "homepage": "https://github.com/aki-k-no/TLCommander",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
